--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: black;
             color: #00ff00;
             font-family: "Courier New", Courier, monospace;
-            overflow: hidden;
+            overflow-y: auto;
         }
         #welcome {
             display: flex;
@@ -69,19 +69,19 @@
         const welcomeScreen = document.getElementById("welcome");
         const messageContainer = document.getElementById("message");
 
-        const birthdayMessage = `Happy Birthday, my Sun! 
+        const birthdayMessage = `Happy Birthday, my Sun! 🌞
 
-        Like a firewall, you shield my heart from vulnerabilities and threats of this harsh world. You are my MFA that ensures every moment of joy we share is genuine and secure.
+        Like a firewall, you shield my heart from vulnerabilities and threats of this harsh world. You are my MFA, ensuring that every moment of joy we share is genuine and secure.
 
-        Your love is the ultimate encryption algorithm for me, transforming even the simplest moments into treasures. Your smile is my zero-trust architecture, verifying my happiness and strengthening my every day.
+        Your love is the ultimate encryption algorithm for me, transforming even the simplest moments into unbreakable treasures. Your smile is my zero-trust architecture, verifying my happiness and strengthening my every day.
 
-        As the Moon to your Sun, I find purpose and light in your brilliance, orbiting your warmth and energy. From the very first day! Always remember how much I was drawn to your gravity even when we were far away like the Moon and the Sun. You illuminate my world, dispelling every shadow of doubt or fear. I wanna do the same for you.
+        As the Moon to your Sun, I find purpose and light in your brilliance, orbiting your warmth and energy...from the very first day! You illuminate my world, dispelling every shadow of doubt or fear. I wanna do the same for you.
 
         Today is not just your birthday but the incredible force of your presence in my life. You are my hero, my XDR against sorrow, and the NGFW protecting our shared dreams.
 
         Wishing you a day filled with boundless joy, endless laughter, and a "forever" of love uninterrupted by any glitches or downtimes. My heart will always ping yours, ensuring we stay forever connected.
 
-        I love you beyond the stars, my Sun. 
+        I love you beyond the stars, my Sun. 💛
 
         Forever yours,
         Your Moon 🌙`;
